Fix #59: Show baseline and target of indicators in the 3 project reporting pages.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -713,3 +713,12 @@ ul[ng-sortable] li *, i.fa.fa-bars {
   color: #555;
 
 }
+
+
+td.empty {
+  background-color: #eee;
+}
+
+td.empty > span {
+  display: none;
+}
