--- a/frontend/src/partials/projects/menu.html
+++ b/frontend/src/partials/projects/menu.html
@@ -32,7 +32,7 @@
 						   class="list-group-item"
 						   ng-class="{active: $state.is('main.project.structure.collection_form_list') || $state.is('main.project.structure.collection_form_edition')}"
 						   disable-if="!masterProject._rev">
-							
+
 							<span class="label label-default pull-right">{{masterProject.forms.length}}</span>
 							<i class="fa fa-sign-in fa-fw"></i>
 							<span translate="project.collection_form_list"></span>
@@ -77,10 +77,20 @@
 							<i class="fa fa-user fa-fw"></i>
 							<span translate="project.users"></span>
 						</a>
+
+
+						<a ui-sref="main.project.structure.revisions"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   disable-if="!masterProject._rev">
+
+							<i class="fa fa-history fa-fw"></i>
+							<span translate="project.revisions"></span>
+						</a>
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="panel panel-default" acl-has-project-role="input">
 				<div class="panel-heading">
 					<h4 class="panel-title" translate="project.input"></h4>
@@ -98,7 +108,7 @@
 							<i class="fa fa-pencil fa-fw"></i>
 							<span>{{form.name}}</span>
 						</a>
-						
+
 
 						<a class="list-group-item" ng-if="!masterProject.forms.length" disable-if="1">
 							<i class="fa fa-pencil fa-fw"></i>
@@ -108,7 +118,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title" translate="shared.reporting"></h4>
@@ -125,7 +135,7 @@
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting_general"></span>
 						</a>
-						
+
 						<a ui-sref="main.project.reporting.detailed"
 						   ui-sref-active="active"
 						   class="list-group-item"
@@ -156,7 +166,7 @@
 						<a class="list-group-item list-group-item-info" disable-if="1" acl-lacks-project-creation style="cursor: not-allowed">
 							<i class="fa fa-clone fa-fw"></i>
 							<span translate="shared.clone"></span>
-						</a>						
+						</a>
 
 						<a class="list-group-item list-group-item-danger" ng-click="deleteProject()" disable-if="!masterProject._rev" acl-has-project-role="owner">
 							<i class="fa fa-trash fa-fw"></i>
