--- a/frontend/src/partials/projects/structure/revisions.html
+++ b/frontend/src/partials/projects/structure/revisions.html
@@ -14,31 +14,38 @@
 		<tr>
 			<th style="width: 15%" translate="project.revision_datetime"></th>
 			<th translate="project.revision_changes"></th>
-			<th></th>
 		</tr>
 	</thead>
-	<tbody>
-		<tr ng-repeat="(revIndex, revision) in revisions">
+	<tbody ng-if="!revisions.length">
+		<tr>
+			<td style="text-align: center" colspan="2" translate="project.revision_none"></td>
+		</tr>
+	</tbody>
+	<tbody ng-repeat="(revIndex, revision) in revisions" class="revtbody">
+		<tr>
 			<td>
 				{{::revision.time|date:'medium'}}<br/>
 				{{::revision.user|formatUser}}
 			</td>
 			<td ng-bind-html="::revision|humanizePatch"></td>
-			<td>
-				<a
-					class="btn btn-xxs"
-					ng-class="{'btn-default': revIndex != selectedIndex, 'btn-primary': revIndex == selectedIndex}"
+		</tr>
+		<tr class="restore"
+			ng-class="{'selected': revIndex == selectedIndex}">
+
+			<td colspan="2" style="text-align: center">
+				<a ng-show="!revision.isEquivalent && revIndex != selectedIndex"
+					class="btn btn-xxs btn-default"
 					ng-click="restore(revIndex)"
 					translate="project.revision_restore"></a>
+
+				<span ng-show="!revision.isEquivalent && revIndex == selectedIndex" translate="project.revision_save_to_confirm"></span>
+				<span ng-show="revision.isEquivalent" translate="project.revision_is_equivalent"></span>
 			</td>
-		</tr>
-		<tr ng-if="::!revisions.length">
-			<td style="text-align: center" colspan="3" translate="project.revision_none"></td>
 		</tr>
 	</tbody>
 	<tfoot>
 		<tr ng-if="revisions.length && !finished">
-			<td style="text-align: center" colspan="3">
+			<td style="text-align: center" colspan="2">
 				<a ng-click="showMore()" translate="project.revision_show_more"></a>
 			</td>
 		</tr>
