--- a/frontend/src/partials/projects/structure/collection-site-list.html
+++ b/frontend/src/partials/projects/structure/collection-site-list.html
@@ -8,7 +8,7 @@
 
 <div class="alert alert-info" translate="project.collection_site_info"></div>
 
-<form name="projectForm" novalidate>
+<form name="forms.current" novalidate>
 
 	<legend translate="project.collection_site_list"></legend>
 
