--- a/frontend/src/partials/projects/structure/logframe-edit.html
+++ b/frontend/src/partials/projects/structure/logframe-edit.html
@@ -9,7 +9,7 @@
 	</li>
 </ol>
 
-<form class="form-horizontal noprint" role="form" name="projectForm" novalidate ng-if="logicalFrameIndex !== null">
+<form class="form-horizontal noprint" role="form" name="forms.current" novalidate ng-if="logicalFrameIndex !== null">
 
 	<!-- [General information] -->
 	<fieldset>
