--- a/frontend/src/components/form/element-filter.html
+++ b/frontend/src/components/form/element-filter.html
@@ -1,15 +1,15 @@
 <div class="input-group">
 	<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
-	<ui-select multiple ng-model="container.selectedElements" theme="bootstrap">
+	<ui-select multiple ng-model="$ctrl.selectedElements" ng-change="$ctrl.onUiSelectChange()" theme="bootstrap">
 		<ui-select-match placeholder="{{'project.no_element_selected'|translate}}">
 			<i class="fa fa-arrow-circle-right" ng-if="$item.id == 'all'"></i>
 			<i class="fa fa-arrow-circle-o-right" ng-if="$item.members"></i>
-			{{$item.name}}
+			{{$item.name|translate}}
 		</ui-select-match>
-		<ui-select-choices repeat="filter.id as filter in selectableElements">
+		<ui-select-choices repeat="filter.id as filter in $ctrl.selectableElements">
 			<i class="fa fa-arrow-circle-right" ng-if="filter.id == 'all'"></i>
 			<i class="fa fa-arrow-circle-o-right" ng-if="filter.members"></i>
-			{{filter.name}}
+			{{filter.name|translate}}
 		</ui-select-choices>
 	</ui-select>
 </div>
