More frontend refactoring

--- a/frontend/src/components/pages/admin/user/user-edition.html
+++ b/frontend/src/components/pages/admin/user/user-edition.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
 	<h3 class="modal-title">
-		<a ng-click="cancel()" class="pull-right" style="cursor: pointer">
+		<a ng-click="$ctrl.dismiss()" class="pull-right" style="cursor: pointer">
 			<i class="fa fa-times"></i>
 		</a>
 		<span translate="project.edit_user"></span>
