--- a/frontend/src/components/pages/project/structure/data-source/data-source-edit.html
+++ b/frontend/src/components/pages/project/structure/data-source/data-source-edit.html
@@ -179,24 +179,9 @@
 					<label class="col-sm-2 control-label" translate="project.partitions_label"></label>
 
 					<div class="col-sm-10 form-control-static">
-						<div class="well" style="padding: 5px;">
-							<ul style="list-style-type: none; padding-left: 5px">
-								<li ng-if="element.partitions.length == 0" translate="project.no_partitions"></li>
-
-								<li ng-repeat="partition in element.partitions">
-									<a ng-click="editPartition(element, partition)">
-										<i class="fa fa-pencil"></i>
-										<strong>{{partition.name}}</strong>
-										({{partition.elements|pluck:"name"|join:", "}})
-									</a>
-								</li>
-							</ul>
-
-							<a ng-click="editPartition(element, null)" class="btn btn-xxs btn-default">
-								<i class="fa fa-plus"></i>
-								<span translate="project.add_partition"></span>
-							</a>
-						</div>
+						<partition-list
+							partitions="element.partitions"
+							on-update="onPartitionListUpdated(element)"></partition-list>
 
 						<span class="help-block" style="margin-top: -10px">
 							<i class="fa fa-info-circle"></i>
@@ -239,7 +224,6 @@
 	<a class="btn btn-default" ng-click="newVariable()">
 		<i class="fa fa-plus"></i>
 		<span translate="project.add_variable"></span>
-
 	</a>
 
 </form>
