--- a/frontend/src/components/pages/project/menu.html
+++ b/frontend/src/components/pages/project/menu.html
@@ -99,7 +99,7 @@
 				<div class="panel-collapse">
 					<div class="list-group">
 
-						<a ui-sref="main.project.input.list({formId: form.id})"
+						<a ui-sref="main.project.input_list({formId: form.id})"
 						   ui-sref-active="active"
 						   class="list-group-item"
 						   acl-has-input-form="form.id"
