--- a/frontend/src/components/pages/project/structure/basics.html
+++ b/frontend/src/components/pages/project/structure/basics.html
@@ -61,8 +61,8 @@
 			<label for="input-themes" class="col-sm-2 control-label" translate="theme.themes"></label>
 			<div class="col-sm-10">
 				<ui-select id="input-themes" multiple ng-model="editableProject.themes" name="themes" theme="bootstrap">
-					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name[language]}}</ui-select-match>
-					<ui-select-choices repeat="theme._id as theme in themes">{{theme.name[language]}}</ui-select-choices>
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name[$root.language]}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes">{{theme.name[$root.language]}}</ui-select-choices>
 				</ui-select>
 
 				<p class="help-block">
