--- a/frontend/src/components/pages/project/structure/cc-indicator-list.html
+++ b/frontend/src/components/pages/project/structure/cc-indicator-list.html
@@ -10,7 +10,7 @@
 <div translate="project.no_cross_cutting" ng-if="themes.length == 0" style="margin-bottom: 10px"></div>
 
 <div ng-repeat="theme in themes">
-	<legend ng-if="theme.definition">{{theme.definition.name[language]}}</legend>
+	<legend ng-if="theme.definition">{{theme.definition.name[$root.language]}}</legend>
 	<legend ng-if="!theme.definition" translate="project.multi_theme_indicator"></legend>
 
 	<!-- markup is broken on purpose: do not fix -->
@@ -19,7 +19,7 @@
 	<div><div class="panel panel-default indicator-panel"
 		 ng-repeat="indicator in theme.indicators|orderBy:('name.' + $root.language)">
 
-		<div class="panel-heading" title="{{indicator.name[language]}}">{{indicator.name[language]|maxLength:90}}</div>
+		<div class="panel-heading" title="{{indicator.name[$root.language]}}">{{indicator.name[$root.language]|maxLength:90}}</div>
 
 		<div class="panel-body" style="padding-bottom: 10px">
 			<strong>{{'project.baseline'|translate}}:</strong> {{editableProject.crossCutting[indicator._id].baseline != null ? editableProject.crossCutting[indicator._id].baseline : '?'}}<br/>
