--- a/frontend/src/components/pages/project/structure/data-source/partition-order.html
+++ b/frontend/src/components/pages/project/structure/data-source/partition-order.html
@@ -3,15 +3,17 @@
 		<tr ng-repeat="headerRow in $ctrl.table.headerRows">
 			<td ng-repeat="leftCol in $ctrl.table.leftCols"></td>
 			<td>
-				<select ng-model="$ctrl.orderedPartitions[headerRow]"
-				        ng-options="p as (p.name + ' (' + p.elements.length + ')') for p in partitions"></select>
+				<select ng-model="$ctrl.editablePartitions[headerRow]"
+				        ng-options="p as (p.name + ' (' + p.numElements + ')') for p in $ctrl.editablePartitions"
+				        ng-change="$ctrl.onValueChange(headerRow)"></select>
 			</td>
 		</tr>
 	</thead>
 	<tr>
 		<td ng-repeat="leftCol in $ctrl.table.leftCols">
-			<select ng-model="$ctrl.orderedPartitions[leftCol]"
-			        ng-options="p as (p.name + ' (' + p.elements.length + ')') for p in partitions"></select>
+			<select ng-model="$ctrl.editablePartitions[leftCol]"
+			        ng-options="p as (p.name + ' (' + p.numElements + ')') for p in $ctrl.editablePartitions"
+			        ng-change="$ctrl.onValueChange(leftCol)"></select>
 		</td>
 		<td class="data-field">{{'project.data'|translate}} ({{size}})</td>
 	</tr>
