--- a/frontend/src/components/pages/project-reporting-general/general.html
+++ b/frontend/src/components/pages/project-reporting-general/general.html
@@ -17,6 +17,7 @@
 
 <general-table
 	project="$ctrl.project"
+	themes="$ctrl.themes"
 	cc-indicators="$ctrl.ccIndicators"
 	filter="$ctrl.filter"
 	group-by="$ctrl.groupBy"
