--- a/frontend/src/components/pages/project-reporting-general/table.html
+++ b/frontend/src/components/pages/project-reporting-general/table.html
@@ -24,5 +24,5 @@
 
 		prefix="tbody.prefix"
 		name="tbody.name"
-		indicators="tbody.indicators"></tbody>
+		sections="tbody.sections"></tbody>
 </table>
