--- a/frontend/src/components/pages/project-reporting-general/table.html
+++ b/frontend/src/components/pages/project-reporting-general/table.html
@@ -1,6 +1,5 @@
-
 <table id="reporting" class="table table-bordered table-condensed">
-	<thead class="parent">
+	<thead ng-style="$ctrl.headerStyle">
 		<tr>
 			<th style="width: 30px" class="noprint"></th>
 			<th translate="shared.name" style="min-width: 300px"></th>
